--- a/Application/Admin/View/Menu/add.html
+++ b/Application/Admin/View/Menu/add.html
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-lg-6">
 
-                <form class="form-horizontal" id="singcms-form">
+                <form class="form-horizontal" id="cms-form">
                     <div class="form-group">
                         <label for="inputname" class="col-sm-2 control-label">菜单名:</label>
                         <div class="col-sm-5">
@@ -93,7 +93,7 @@
 
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                            <button type="button" class="btn btn-default" id="singcms-button-submit">提交</button>
+                            <button type="button" class="btn btn-default" id="cms-button-submit">提交</button>
                         </div>
                     </div>
                 </form>
