--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    您好!欢迎使用singcms内容管理平台
+                    您好!欢迎使用小牛CMS内容管理平台
                 </h1>
                 <ol class="breadcrumb">
                     <li class="active">
