--- a/Application/Admin/View/Menu/index.html
+++ b/Application/Admin/View/Menu/index.html
@@ -26,15 +26,15 @@
         </div>
         <!-- /.row -->
         <div class="row">
-            <form action="/admin.php" method="get">
+            <form action="/admin.php?c=menu&a=index" method="get">
 
                 <div class="input-group">
                     <span class="input-group-addon">类型</span>
                     <select class="form-control" name="type">
-                        <option value='' >请选择类型</option>
+                        <option value='-1' >请选择类型</option>
 
-                        <option value="1" >后台菜单</option>
-                        <option value="0" >前端导航</option>
+                        <option value="1" <if condition ="$type eq 1">selected ="selected"</if> >后台菜单</option>
+                        <option value="0" <if condition = "$type eq 0">selected ="selected"</if>>前端导航</option>
                     <lect>
                 </div>
 
