add menu delete module

--- a/Application/Admin/View/Menu/index.html
+++ b/Application/Admin/View/Menu/index.html
@@ -75,7 +75,7 @@
                                 <td>{$menu.m}</td>
                                 <td>{$menu.type|getMenuType}</td>
                                 <td>{$menu.status|status}</td>
-                                <td><span class="glyphicon glyphicon-edit" aria-hidden="true" id="xiaoniucms-edit" attr-id="{$menu.menu_id}"></span>    <a href="javascript:void(0)" attr-id="" id="singcms-delete"  attr-a="menu" attr-message="删除"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></a></td>
+                                <td><span class="glyphicon glyphicon-edit" aria-hidden="true" id="xiaoniucms-edit" attr-id="{$menu.menu_id}"></span>    <a href="javascript:void(0)" attr-id="{$menu.menu_id}" id="xiaoniucms-delete"  attr-a="menu" attr-message="删除"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></a></td>
                             </tr>
                         </volist>
 
