--- a/Application/Admin/View/Menu/index.html
+++ b/Application/Admin/View/Menu/index.html
@@ -69,7 +69,7 @@
                         <tbody>
                         <volist name="menus" id="menu">
                             <tr>
-                                <td><input size="4" type="text" name="" value=""/></td>
+                                <td><input size="4" type="text" name="listorder[{$menu.menu_id}]" value="{$menu.listorder}"/></td>
                                 <td>{$menu.menu_id}</td>
                                 <td>{$menu.name}</td>
                                 <td>{$menu.m}</td>
@@ -87,7 +87,9 @@
                             {$pageRes}
                         </ul>
                     </nav>
-                    
+                    <div>
+                        <button  id="button-listorder" type="button" class="btn btn-primary dropdown-toggle" ><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>更新排序</button>
+                    </div>
                 </div>
             </div>
 
