--- a/Application/Admin/View/Index/nav.html
+++ b/Application/Admin/View/Index/nav.html
@@ -1,3 +1,7 @@
+<?php
+  $navs = D("Menu")->getAdminMenus();
+  $index ='index';
+?>
 
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -27,12 +31,14 @@
   <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav side-nav nav_list">
-      <li >
+      <li {$index|getActive}>
         <a href="/admin.php?c=index"><i class="fa fa-fw fa-dashboard"></i> 首页</a>
       </li>
-      <li>
-        <a href="/admin.php?c=menu"><i class="fa fa-fw fa-bar-chart-o"></i>菜单管理</a>
+      <volist name="navs" id="nav">
+      <li {$nav.c|getActive}>
+        <a href="{$nav|getAdminMenuUrl}"><i class="fa fa-fw fa-bar-chart-o"></i>{$nav.name}</a>
       </li>
+    </volist>
 
     </ul>
   </div>
