--- a/Application/Admin/View/Content/add.html
+++ b/Application/Admin/View/Content/add.html
@@ -53,9 +53,9 @@
               <div class="col-sm-5">
                 <select class="form-control" name="title_font_color">
                   <option value="">==请选择颜色==</option>
-                    
-                      <option value=""></option>
-                    
+                    <foreach name="titleFontColor" item="color">
+                      <option value="{$key}">{$color}</option>
+                    </foreach>
                 </select>
               </div>
             </div>
@@ -63,8 +63,9 @@
               <label for="inputname" class="col-sm-2 control-label">所属栏目:</label>
               <div class="col-sm-5">
                 <select class="form-control" name="catid">
-
-                    <option value=""></option>
+                <foreach name="webSiteMenu" item='sitenav'>
+                    <option value="{$sitenav.menu_id}">{$sitenav.name}</option>
+                </foreach>
                 </select>
               </div>
             </div>
@@ -73,8 +74,9 @@
               <label for="inputname" class="col-sm-2 control-label">来源:</label>
               <div class="col-sm-5">
                 <select class="form-control" name="copyfrom">
-
-                    <option value=""></option>
+                <foreach name="copyFrom" item="cfrom">
+                    <option value="{$key}">{$cfrom}</option>
+                </foreach>
                 </select>
               </div>
             </div>
