add article list module

--- a/Application/Admin/View/Content/index.html
+++ b/Application/Admin/View/Content/index.html
@@ -32,9 +32,9 @@
               <span class="input-group-addon">栏目</span>
               <select class="form-control" name="catid">
                 <option value='' >全部分类</option>
-                
-                <option value="" ></option>
-                
+                <foreach name = "webSiteMenu" item="sitenav">
+                <option value="{$sitenav.menu_id}" <if condition = "$sitenav.menu_id eq $_GET['catid']">selected="selected"</if>>{$sitenav.name}</option>
+                </foreach>
               </select>
             </div>
           </div>
@@ -42,7 +42,7 @@
           <input type="hidden" name="a" value="index"/>
           <div class="col-md-3">
             <div class="input-group">
-              <input class="form-control" name="title" type="text" value="" placeholder="文章标题" />
+                <input class="form-control" name="title" type="text" value="<notempty name ="Think.get.title">{$_GET['title']}</notempty>" placeholder="文章标题" />
                 <span class="input-group-btn">
                   <button id="sub_data" type="submit" class="btn btn-primary"><i class="glyphicon glyphicon-search"></i></button>
                 </span>
@@ -71,19 +71,19 @@
                 </tr>
                 </thead>
                 <tbody>
-                
+                <volist name="news" id="new">
                   <tr>
                     <td><input type="checkbox" name="pushcheck" value="{$new.news_id}"></td>
                     <td><input size=4 type='text'  name='' value=""/></td><!--6.7-->
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>{$new.news_id}</td>
+                    <td>{$new.title}</td>
+                    <td>{$new.catid|getCatName=$webSiteMenu,###}</td>
+                    <td>{$new.copyfrom|getCopyFromById}</td>
                     <td>
-                      
+                      {$new.thumb|isThumb}
                     </td>
-                    <td></td>
-                    <td><span  attr-status=""  attr-id="" class="sing_cursor singcms-on-off" id="singcms-on-off" ></span></td>
+                    <td>{$new.create_time|date="Y-m-d H:i",###}</td>
+                    <td><span  attr-status=""  attr-id="" class="sing_cursor singcms-on-off" id="singcms-on-off" ></span>{$new.status|status}</td>
                     <td><span class="sing_cursor glyphicon glyphicon-edit" aria-hidden="true" id="singcms-edit" attr-id="" ></span>
                       <a href="javascript:void(0)" id="singcms-delete"  attr-id=""  attr-message="删除">
                         <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
@@ -91,14 +91,14 @@
 
                     </td>
                   </tr>
-                
+                </volist>
 
                 </tbody>
               </table>
               <nav>
 
               <ul >
-                
+                {$pageres}
               </ul>
 
             </nav>
