--- a/Application/Admin/View/Content/index.html
+++ b/Application/Admin/View/Content/index.html
@@ -55,7 +55,7 @@
           <h3></h3>
           <div class="table-responsive">
             <form id="singcms-listorder">
-              <table class="table table-bordered table-hover singcms-table">
+              <table class="table table-bordered table-hover xiaoniucms-table">
                 <thead>
                 <tr>
                   <th id="singcms-checkbox-all" width="10"><input type="checkbox"/></th>
@@ -84,8 +84,8 @@
                     </td>
                     <td>{$new.create_time|date="Y-m-d H:i",###}</td>
                     <td><span  attr-status=""  attr-id="" class="sing_cursor singcms-on-off" id="singcms-on-off" ></span>{$new.status|status}</td>
-                    <td><span class="sing_cursor glyphicon glyphicon-edit" aria-hidden="true" id="singcms-edit" attr-id="" ></span>
-                      <a href="javascript:void(0)" id="singcms-delete"  attr-id=""  attr-message="删除">
+                    <td><span class="sing_cursor glyphicon glyphicon-edit" aria-hidden="true" id="xiaoniucms-edit" attr-id="{$new.news_id}" ></span>
+                      <a href="javascript:void(0)" id="xiaoniucms-delete"  attr-id=""  attr-message="删除">
                         <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
                       </a>
 
