--- a/Application/Admin/View/Menu/index.html
+++ b/Application/Admin/View/Menu/index.html
@@ -53,7 +53,7 @@
             <div class="col-lg-6">
                 <h3></h3>
                 <div class="table-responsive">
-                    <form id="xucms-listorder">
+                    <form id="xncms-listorder">
                     <table class="table table-bordered table-hover xiaoniucms-table">
                         <thead>
                         <tr>
