add modify article module

--- a/Application/Admin/View/Content/edit.html
+++ b/Application/Admin/View/Content/edit.html
@@ -99,8 +99,7 @@
                 <input value="{$news.keywords}" type="text" class="form-control" name="keywords" id="inputPassword3" placeholder="请填写关键词">
               </div>
             </div>
-
-
+            <input type="hidden" name="news_id" value="{$news.news_id}" >
             <div class="form-group">
               <div class="col-sm-offset-2 col-sm-10">
                 <button type="button" class="btn btn-default" id="cms-button-submit">提交</button>
