--- a/Application/Admin/View/Content/index.html
+++ b/Application/Admin/View/Content/index.html
@@ -83,9 +83,9 @@
                       {$new.thumb|isThumb}
                     </td>
                     <td>{$new.create_time|date="Y-m-d H:i",###}</td>
-                    <td><span  attr-status=""  attr-id="" class="sing_cursor singcms-on-off" id="singcms-on-off" ></span>{$new.status|status}</td>
+                    <td><span  attr-status="<if condition="$new['status'] eq 1">0<else/>1</if>"  attr-id="{$new.news_id}" class="sing_cursor singcms-on-off" id="xiaoxiucms-on-off" ></span>{$new.status|status}</td>
                     <td><span class="sing_cursor glyphicon glyphicon-edit" aria-hidden="true" id="xiaoniucms-edit" attr-id="{$new.news_id}" ></span>
-                      <a href="javascript:void(0)" id="xiaoniucms-delete"  attr-id=""  attr-message="删除">
+                      <a href="javascript:void(0)" id="xiaoniucms-delete"  attr-id="{$new.news_id}"  attr-message="删除">
                         <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
                       </a>
 
