add article listorder module

--- a/Application/Admin/View/Content/index.html
+++ b/Application/Admin/View/Content/index.html
@@ -54,7 +54,7 @@
         <div class="col-lg-6">
           <h3></h3>
           <div class="table-responsive">
-            <form id="singcms-listorder">
+            <form id="xncms-listorder">
               <table class="table table-bordered table-hover xiaoniucms-table">
                 <thead>
                 <tr>
@@ -74,7 +74,7 @@
                 <volist name="news" id="new">
                   <tr>
                     <td><input type="checkbox" name="pushcheck" value="{$new.news_id}"></td>
-                    <td><input size=4 type='text'  name='' value=""/></td><!--6.7-->
+                    <td><input size=4 type='text'  name='listorder[{$new.news_id}]' value="{$new.listorder}"/></td><!--6.7-->
                     <td>{$new.news_id}</td>
                     <td>{$new.title}</td>
                     <td>{$new.catid|getCatName=$webSiteMenu,###}</td>
@@ -102,7 +102,9 @@
               </ul>
 
             </nav>
-              
+            <div>
+              <button  id="button-listorder" type="button" class="btn btn-primary dropdown-toggle" ><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>更新排序</button>
+            </div>  
             </form>
 
           </div>
