--- a/Application/Admin/View/Content/index.html
+++ b/Application/Admin/View/Content/index.html
@@ -58,7 +58,7 @@
               <table class="table table-bordered table-hover xiaoniucms-table">
                 <thead>
                 <tr>
-                  <th id="singcms-checkbox-all" width="10"><input type="checkbox"/></th>
+                  <th id="xiaoniucms-checkbox-all" width="10"><input type="checkbox"/></th>
                   <th width="14">排序</th>
                   <th>id</th>
                   <th>标题</th>
@@ -106,7 +106,15 @@
               <button  id="button-listorder" type="button" class="btn btn-primary dropdown-toggle" ><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>更新排序</button>
             </div>  
             </form>
-
+            <div class="input-group">
+              <select class="form-control" name="position_id" id="select-push">
+                <option value="0">请选择推荐位进行推送</option>
+                <foreach name="positions" item="position">
+                  <option value="{$position.id}">{$position.name}</option>
+                </foreach>
+              </select>
+              <button id="xiaoniucms-push" type="button" class="btn btn-primary">推送</button>
+            </div>
           </div>
         </div>
 
