add position edit module

--- a/Application/Admin/View/Positioncontent/edit.html
+++ b/Application/Admin/View/Positioncontent/edit.html
@@ -30,7 +30,7 @@
 					<div class="form-group">
 						<label for="inputname" class="col-sm-2 control-label">标题:</label>
 						<div class="col-sm-5">
-							<input type="text" name="title" class="form-control" id="inputname" placeholder="请填写标题">
+							<input type="text" name="title" class="form-control" id="inputname" placeholder="请填写标题" value="{$vo.title}">
 						</div>
 					</div>
 					<div class="form-group">
@@ -38,7 +38,7 @@
 						<div class="col-sm-5">
 							<select class="form-control" name="position_id">
 							<volist name="positions" id="position">
-									<option value="{$position.id}">{$position.name}</option>
+									<option value="{$position.id}"<if condition ="$position['id'] eq $vo['position_id']">selected="selected"</if>>{$position.name}</option>
 							</volist>
 							</select>
 						</div>
@@ -48,7 +48,7 @@
 						<label for="inputname" class="col-sm-2 control-label">缩图:</label>
 						<div class="col-sm-5">
 							<input id="file_upload"  type="file" multiple="true" >
-							<img style="display: none" id="upload_org_code_img" src="" width="150" height="150">
+							<img style="display: none" id="upload_org_code_img" src="{$vo.thumb}" width="150" height="150">
 							<input id="file_upload_image" name="thumb" type="hidden" multiple="true" value="">
 						</div>
 					</div>
@@ -56,22 +56,22 @@
 					<div class="form-group">
 						<label for="inputPassword3" class="col-sm-2 control-label">url:</label>
 						<div class="col-sm-5">
-							<input type="text" class="form-control" name="url" id="inputPassword3" placeholder="请url地址">
+							<input type="text" class="form-control" name="url" id="inputPassword3" placeholder="请url地址" value="{$vo.url}">
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="inputname" class="col-sm-2 control-label">文章id:</label>
 						<div class="col-sm-5">
-							<input type="text" name="news_id" class="form-control" id="inputname" placeholder="如果和文章无关联的可以不添加文章id">
+							<input type="text" name="news_id" class="form-control" id="inputname" placeholder="如果和文章无关联的可以不添加文章id" value="{$vo.news_id}">
 						</div>
 					</div>
 					<div class="form-group">
 					<label for="inputPassword3" class="col-sm-2 control-label">状态:</label>
 					<div class="col-sm-5">
-						<input type="radio" name="status" id="optionsRadiosInline1" value="1" checked> 开启
-						<input type="radio" name="status" id="optionsRadiosInline2" value="0"> 关闭
+						<input type="radio" name="status" id="optionsRadiosInline1" value="1" <if condition="$vo.status eq 1">checked</if>> 开启
+						<input type="radio" name="status" id="optionsRadiosInline2" value="0"<if condition="$vo.status eq 0">checked</if>> 关闭
 					</div>
-					
+					<input type="hidden" name="id" value="{$vo.id}">
 				</div>
 
 					<div class="form-group">
@@ -100,6 +100,12 @@
 		'ajax_upload_image_url' : '/admin.php?c=image&a=ajaxuploadimage',
 		'ajax_upload_swf' : '/Public/js/party/uploadify.swf'
 	};
+</script>
+<script>
+	var thumb = "{$vo.thumb}";
+	if(thumb){
+		$("#upload_org_code_img").show();
+	}
 </script>
 <!-- /#wrapper -->
 <script type="text/javascript" src="/Public/js/admin/form.js"></script>
