--- a/Application/Admin/View/Positioncontent/index.html
+++ b/Application/Admin/View/Positioncontent/index.html
@@ -69,7 +69,7 @@
                         <tbody>
                             <volist name='contents' id="vo">
                             <tr>
-                                <td><input size=4 type='text'  name='{listorder[$vo.id]}' value="{$vo.listorder}"/></td>
+                                <td><input size=4 type='text'  name='listorder[{$vo.id}]' value="{$vo.listorder}"/></td>
                                 <td>{$vo.id}</td>
                                 <td>{$vo.title}</td>
                                 <td>{$vo.create_time|date="Y-m-d H:i",###}</td>
