--- a/Application/Admin/View/Basic/index.html
+++ b/Application/Admin/View/Basic/index.html
@@ -10,7 +10,16 @@
 		<!-- Page Heading -->
 		<div class="row">
 		<div class="col-lg-12">
-			<a href="/admin.php?c=basic"><button type="button" class="btn btn-primary</if>"> 基本配置</button></a>
+            <ol class="breadcrumb">
+                <li>
+                    <i class="fa fa-dashboard"></i>  <a href="/admin.php?c=basic">基本配置管理</a>
+                </li>
+                <li class="active">
+                    <i class="fa fa-table"></i>基本配置
+                </li>
+            </ol>
+            
+			<a href="/admin.php?c=basic"><button type="button" class="btn btn-primary"> 基本配置</button></a>
 		</div>
 		</div>
 		<!-- /.row -->
@@ -18,30 +27,30 @@
 		<div class="row">
 			<div class="col-lg-6">
 
-				<form class="form-horizontal" id="singcms-form">
+				<form class="form-horizontal" id="cms-form">
 					<div class="form-group">
 						<label for="inputname" class="col-sm-2 control-label">站点标题:</label>
 						<div class="col-sm-5">
-							<input type="text" name="title" value="" class="form-control" id="inputname" placeholder="请填写站点标题">
+							<input type="text" name="title" value="{$vo.title}" class="form-control" id="inputname" placeholder="请填写站点标题">
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label for="inputPassword3" class="col-sm-2 control-label">站点关键词:</label>
 						<div class="col-sm-5">
-							<input type="text" class="form-control" value="" name="keywords" id="inputPassword3" placeholder="请填写站点关键词">
+							<input type="text" class="form-control" value="{$vo.keywords}" name="keywords" id="inputPassword3" placeholder="请填写站点关键词">
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="inputPassword3" class="col-sm-2 control-label">站点描述:</label>
 						<div class="col-sm-5">
-							<textarea class="form-control" rows="3" name="description"></textarea>
+							<textarea class="form-control" rows="3" name="description">{$vo.description}</textarea>
 						</div>
 					</div>
 
 					<div class="form-group">
 						<div class="col-sm-offset-2 col-sm-10">
-							<button type="button" class="btn btn-default" id="singcms-button-submit">提交</button>
+							<button type="button" class="btn btn-default" id="cms-button-submit">提交</button>
 						</div>
 					</div>
 				</form>
