--- a/Application/Admin/View/Positioncontent/index.html
+++ b/Application/Admin/View/Positioncontent/index.html
@@ -12,9 +12,11 @@
             <div class="col-lg-12">
 
                 <ol class="breadcrumb">
-
+                    <li>
+                        <i class="fa fa-dashboard"></i>  <a href="/admin.php?c=positioncontent">推荐位内容管理</a>
+                    </li>
                     <li class="active">
-                        <i class="fa fa-table"></i>推荐位内容管理
+                        <i class="fa fa-table"></i>推荐位内容列表
                     </li>
                 </ol>
             </div>
