--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -5,19 +5,15 @@
       <div class="col-sm-9 col-md-9">
         <div class="banner">
           <div class="banner-left">
-            <img src="/Public/images/banner.jpg" alt="">
+            <a target="_blank" href="/index.php?c=detail&id={$result['topPicNews'][0]['news_id']}"><img width="670px" height="360px" src="{$result['topPicNews'][0]['thumb']}" alt=""></a>
           </div>
           <div class="banner-right">
             <ul>
+              <volist name="result['topSmallNews']" id="vo">
               <li>
-                <img src="/Public/images/img1.jpg" alt="">
+                <a target="_blank" href="/index.php?c=detail&id={$vo.news_id}"></a><img width="150" height="113" src="{$vo.thumb}" alt="{$vo.title}">
               </li>
-              <li>
-                <img src="/Public/images/img2.jpg" alt="">
-              </li>
-              <li>
-                <img src="/Public/images/img3.jpg" alt="">
-              </li>
+              </volist>
             </ul>
           </div>
         </div>
