--- a/Application/Home/View/Index/right.html
+++ b/Application/Home/View/Index/right.html
@@ -5,27 +5,22 @@
   </div>
   <div class="right-content">
     <ul>
-      <li class="num1 curr">
-        <a href="">习近平谈气候变化</a>
+      <volist name="result['rankNews']" id="vo" key="k">
+        <li class="num{$k} curr">
+        <a target="_blank" href="/index.php?c=detail&id={$vo.news_id}">{$vo.small_title}</a>
+        <if condition="$k eq 1">
         <div class="intro">
-          中美双方应该不断挖掘合作潜力、培育合作亮点，加快双边投资协定谈判...
+          {$vo.description}
         </div>
+        </if>
       </li>
-      <li class="num2"><a href="">普京回应俄战机被击落</a></li>
-      <li class="num3"><a href="">普京回应俄战机被击落</a</li>
-      <li class="num4"><a href="">普京回应俄战机被击落</a></li>
-      <li class="num5"><a href="">普京回应俄战机被击落</a></li>
-      <li class="num6"><a href="">普京回应俄战机被击落</a></li>
-      <li class="num7"><a href="">普京回应俄战机被击落</a></li>
-      <li class="num8"><a href="">普京回应俄战机被击落</a></li>
-      <li class="num9"><a href="">普京回应俄战机被击落</a></li>
-      <li class="num10"><a href="">普京回应俄战机被击落</a></li>
+      </volist>
     </ul>
   </div>
+  <volist name="result['advNews']" id="vo" key="k">
   <div class="right-hot">
-    <img src="/Public/images/img5.jpg" alt="">
+    <a target="_blank" href="{$vo.url}"><img src="{$vo.thumb}" alt="{$vo.name}"></a>
   </div>
-  <div class="right-hot">
-    <img src="/Public/images/img6.jpg" alt="">
-  </div>
+  </volist>
+  
 </div>
