add view module

--- a/Application/Admin/View/Content/index.html
+++ b/Application/Admin/View/Content/index.html
@@ -88,7 +88,7 @@
                       <a href="javascript:void(0)" id="xiaoniucms-delete"  attr-id="{$new.news_id}"  attr-message="删除">
                         <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
                       </a>
-          
+                      <a href="/index.php?c=detail&a=view&id={$new.news_id}"><span class="sing_cursor glyphicon glyphicon-eye-open" aria-hidden="true" id="" attr-id="{$new.news_id}" ></span></a>
                     </td>
                   </tr>
                 </volist>
