add admin cache module

--- a/Application/Admin/View/Basic/cache.html
+++ b/Application/Admin/View/Basic/cache.html
@@ -10,7 +10,15 @@
 		<!-- Page Heading -->
 		<div class="row">
 		<div class="col-lg-12">
-			<a href="/admin.php?c=basic&a=cache"><button type="button" class="btn btn-primary"> 缓存配置</button></a>
+			<ol class="breadcrumb">
+                <li>
+                    <i class="fa fa-dashboard"></i>  <a href="/admin.php?c=basic">基本配置管理</a>
+                </li>
+                <li class="active">
+                    <i class="fa fa-table"></i>基本配置
+                </li>
+            </ol>
+			<include file="Basic/button" />
 		</div>
 		</div>
 		<!-- /.row -->
