--- a/Application/Admin/View/Basic/index.html
+++ b/Application/Admin/View/Basic/index.html
@@ -19,7 +19,7 @@
                 </li>
             </ol>
             
-			<a href="/admin.php?c=basic"><button type="button" class="btn btn-primary"> 基本配置</button></a>
+            <include file="Basic/button" />
 		</div>
 		</div>
 		<!-- /.row -->
