--- a/Application/Admin/View/Basic/index.html
+++ b/Application/Admin/View/Basic/index.html
@@ -47,6 +47,20 @@
 							<textarea class="form-control" rows="3" name="description">{$vo.description}</textarea>
 						</div>
 					</div>
+					<div class="form-group">
+						<label for="inputPassword3" class="col-sm-2 control-label">是否自动备份数据库:</label>
+						<div class="col-sm-5">
+							<input type="radio" name="dumpmysql" id="optionRadiosInline1" value="1" />是
+							<input type="radio" name="dumpmysql" id="optionRadiosInline2" value="0" />否
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="inputPassword3" class="col-sm-2 control-label">是否自动生成首页缓存:</label>
+						<div class="col-sm-5">
+							<input type="radio" name="cacheindex" id="optionRadiosInline1" value="1" <if condition="$vo['cacheindex'] eq 1">checked="checked"</if> />是
+							<input type="radio" name="cacheindex" id="optionRadiosInline2" value="0" <if condition="$vo['cacheindex'] eq 0">checked="checked"</if>/>否
+						</div>
+					</div>
 
 					<div class="form-group">
 						<div class="col-sm-offset-2 col-sm-10">
