--- a/Application/Admin/View/Basic/cache.html
+++ b/Application/Admin/View/Basic/cache.html
@@ -30,9 +30,17 @@
 						<button type="button" class="btn" id="cache-index">确定更新</button>
 					</div>
 				</div>
+			</div>
 
-				
-
+		</div>
+		<div class="row">
+			<div class="col-lg-6">
+				<div class="form-group">
+					<label for="inputname" class="col-sm-2 control-label">更新数据库:</label>
+					<div class="col-sm-5">
+						<button type="button" class="btn" id="mysqldump">确定更新</button>
+					</div>
+				</div>
 			</div>
 
 		</div>
@@ -63,6 +71,21 @@
 
 	},"JSON");
   });
+$("#mysqldump").click(function(){
 
+	var url = 'admin.php?c=cron&a=dumpmysql';
+	var jump_url = '/admin.php?c=basic&a=cache';
+	var postData = {};
+
+	$.post(url, postData,function(result){
+	  if(result.status==1) {
+		// 成功
+		return dialog.success(result.message,jump_url);
+	  }else if(result.status==0) {
+		return dialog.error(result.message);
+	  }
+
+	},"JSON");
+  });
 </script>
 <include file="Index/footer" />
