--- a/Application/Admin/View/Admin/index.html
+++ b/Application/Admin/View/Admin/index.html
@@ -19,7 +19,7 @@
                         <i class="fa fa-dashboard"></i>  <a href="/admin.php?c=admin">用户管理</a>
                     </li>
                     <li class="active">
-                        <i class="fa fa-table"></i>{$nav}
+                        <i class="fa fa-table"></i>用户管理
                     </li>
                 </ol>
             </div>
@@ -34,7 +34,7 @@
                 <h3></h3>
                 <div class="table-responsive">
                     <form id="singcms-listorder">
-                    <table class="table table-bordered table-hover singcms-table">
+                    <table class="table table-bordered table-hover xiaoniucms-table">
                         <thead>
                         <tr>
                             <th>id</th>
@@ -46,14 +46,14 @@
                         </tr>
                         </thead>
                         <tbody>
+                            <volist name="admins" id="admin">
                             <tr>
-                                
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td><span  attr-status=""  attr-id="" class="sing_cursor singcms-on-off" id="singcms-on-off" ></span></td>
-                                <td>    <a href="javascript:void(0)" attr-id="" id="singcms-delete"  attr-a="admin" attr-message="删除"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></a></td>
+                                <td>{$admin.admin_id}</td>
+                                <td>{$admin.username}</td>
+                                <td>{$admin.realname}</td>
+                                <td>{$admin.lastlogintime|date="Y-m-d H:i:s",###}</td>
+                                <td><span  attr-status="<if condition="$admin['status'] eq 1">0<else/>1</if>"  attr-id="{$admin.admin_id}" class="sing_cursor singcms-on-off" id="xiaoniucms-on-off" >{$admin.status|status}</span></td>
+                                <td>    <a href="javascript:void(0)" attr-id="" id="xiaoniucms-delete"  attr-a="admin" attr-message="删除"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></a></td>
                             </tr>
                         </volist>
 
