update user admin module

--- a/Application/Admin/View/Admin/add.html
+++ b/Application/Admin/View/Admin/add.html
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-lg-6">
 
-                <form class="form-horizontal" id="singcms-form">
+                <form class="form-horizontal" id="cms-form">
                     <div class="form-group">
                         <label for="inputname" class="col-sm-2 control-label">用户名:</label>
                         <div class="col-sm-5">
@@ -40,7 +40,7 @@
                     <div class="form-group">
                         <label for="inputPassword3" class="col-sm-2 control-label">密码:</label>
                         <div class="col-sm-5">
-                            <input type="text" name="password" class="form-control" id="inputname" placeholder="请填写密码"/> 
+                            <input type="password" name="password" class="form-control" id="inputname" placeholder="请填写密码"/> 
                         </div>
 
                     </div>
@@ -53,7 +53,7 @@
 
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                            <button type="button" class="btn btn-default" id="singcms-button-submit">提交</button>
+                            <button type="button" class="btn btn-default" id="cms-button-submit">提交</button>
                         </div>
                     </div>
                 </form>
@@ -80,6 +80,7 @@
         'jump_url' : '/admin.php?c=admin',
     }
 </script>
+
 <include file="Index/footer" />
 
 
