--- a/Application/Admin/View/Admin/personal.html
+++ b/Application/Admin/View/Admin/personal.html
@@ -27,25 +27,25 @@
 		<div class="row">
 			<div class="col-lg-6">
 
-				<form class="form-horizontal" id="singcms-form">
+				<form class="form-horizontal" id="cms-form">
 					<div class="form-group">
 						<label  class="col-sm-2 control-label">用户名:</label>
 						<div class="col-sm-5">
-							
+						{$vo.username}
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label  class="col-sm-2 control-label">真实姓名:</label>
 						<div class="col-sm-5">
-							<input type="text" class="form-control" name="realname" id="inputPassword3" placeholder="" value="">
+							<input type="text" class="form-control" name="realname" id="inputPassword3" placeholder="" value="{$vo.realname}">
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label  class="col-sm-2 control-label">个人邮箱:</label>
 						<div class="col-sm-5">
-							<input type="text" class="form-control" name="email" id="inputPassword3" placeholder="" value="">
+							<input type="text" class="form-control" name="email" id="inputPassword3" placeholder="" value="{$vo.email}">
 						</div>
 					</div>
 					<input type="hidden" name="admin_id" value=""/>
@@ -53,7 +53,7 @@
 
 					<div class="form-group">
 						<div class="col-sm-offset-2 col-sm-10">
-							<button type="button" class="btn btn-default" id="singcms-button-submit">提交</button>
+							<button type="button" class="btn btn-default" id="cms-button-submit">提交</button>
 						</div>
 					</div>
 				</form>
