--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -12,7 +12,7 @@
             <ul>
               <volist name="result['topSmallNews']" id="vo">
               <li>
-                <a target="_blank" href="/index.php?c=detail&id={$vo.news_id}"></a><img width="150" height="113" src="{$vo.thumb}" alt="{$vo.title}">
+                <a target="_blank" href="/index.php?c=detail&id={$vo.news_id}"><img width="150" height="113" src="{$vo.thumb}" alt="{$vo.title}"></a>
               </li>
               </volist>
             </ul>
